# side-projects

./: .gitignore  README.md
POMDP/: .Rhistory  README.md
POMDP/figures/: POMDP.tex
POMDP/results/: drug_delta_statistics.csv  fit_optimal_final_v4.rds  fit_optimal_final_v5.rds  fit_optimal_final_v6.rds  fit_optimal_final_v7.rds  fit_optimal_final_v8.rds  parameter_summary.csv
POMDP/scripts/: .Rhistory  POMDP_model  POMDP_model.stan  behavior_analysis.R  beta_bernoulli_model  beta_bernoulli_model.stan  beta_bernoulli_model_model_prior_checked_v2.stan  beta_bernoulli_model_prior_checked  beta_bernoulli_model_prior_checked.stan  beta_bernoulli_model_prior_checked_v2  create_discretization.R  model_draws.R  (+12 more)
agents_r/: agent_logic.R
hmm_python_implementation/: covariates.py  main.py  pyproject.toml  tickers.json
hmm_python_implementation/market_data/: AAPL.csv  ADA-USD.csv  ADI.csv  AEM.csv  AEP.csv  AGG.csv  AMAT.csv  AMD.csv  AMZN.csv  AVAX-USD.csv  AVGO.csv  BNB-USD.csv  BND.csv  BP.csv  CEG.csv  COP.csv  CRM.csv  CVX.csv  D.csv  DOGE-USD.csv  DUK.csv  DX-Y.NYB.csv  EOG.csv  ETH-USD.csv  EXC.csv  FNV.csv  GLD.csv  GOOGL.csv  GOVT.csv  HYG.csv  IAU.csv  IEF.csv  INTC.csv  KGC.csv  LINK-USD.csv  LQD.csv  LRCX.csv  META.csv  MPC.csv  MSFT.csv  (+42 more)
hmm_r_implementation/: btc.csv  final_probabilities_with_dates_prices.csv  hmm_funcs.R  main_pipeline.R
mycelial_brain/: LICENSE  data.txt  mycelial-brain.cabal
tda_sp500/: btc.csv  final_probabilities_with_dates_prices.csv  get_sp500_data.R  hmm.R  hmm_funcs.R  main_pipeline.R  plots.R
topology_haskell/: CHANGELOG.md
(+26 files in other folders)
