[project]
name = "hmm-python-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pandas-ta>=0.4.71b0",
    "torch>=2.9.1",
    "typing>=3.10.0.0",
    "yfinance>=0.2.66",
]
